--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           
           <div class="row mt-0">
             <div class="col-md-10 offset-md-1 text-center">
-              <h1 class="header mb-0 abs">Give the gift of ether!</h1>
+              <h1 class="header mb-0 abs">The secure gift card</h1>
               <img class="header-image" src="img/HEADER-IMAGE-NEW.jpg" alt="">
               <p>Ether.Cards are cryptocurrency gift cards that make it incredibly easy to gift tokens to one another.  Want to distribute your token or introduce someone to cryptocurrencies? Ether.Cards is the best way to get that done without the recipient needing much technical know-how. </p>
             </div>
@@ -386,7 +386,7 @@
 
           <div class="row">
             <div class="col-md-10 offset-md-1 text-center">
-              <p>Send us an email at <a href="mailto:hello@ethercards.com">hello@ethercards.com</a></p>
+              <p>Send us an email at <a href="mailto:hello@ether.cards">hello@ether.cards</a></p>
             </div>
           </div>
         </section>
