--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-md-10 offset-md-1 text-center">
               <h1 class="header mb-0 abs">The secure gift card</h1>
               <img class="header-image" src="img/HEADER-IMAGE-NEW.jpg" alt="">
-              <p>Ether.Cards are cryptocurrency gift cards that make it incredibly easy to gift tokens to one another.  Want to distribute your token or introduce someone to cryptocurrencies? Ether.Cards is the best way to get that done without the recipient needing much technical know-how. </p>
+              <p>Ether.Cards are secure gift cards that make it incredibly easy to gift tokens to one another.  Want to distribute your token or loyalty points? Ether.Cards is the best way to get that done without the recipient needing much technical know-how. </p>
             </div>
           </div>
 
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-4 ehbox text-center">
                   <h3 class="subhead">Redeem</h3>
-                  <p>Redeem your tokens by using MyCrypto or any mobile wallet that has a seed word restoration feature. </p>
+                  <p>Redeem your tokens by using MyEtherWallet or any mobile wallet that has a seed word restoration feature. </p>
                   <div class="img-container">
                     <img src="img/icon_03.png" alt="REDEEM">
                   </div>
@@ -318,7 +318,7 @@
                   <div class="card">
                       <div class="card-body text-center">
                           <h4 class="subhead">Classic</h4>
-                          <p class="with-number"><span>1</span> Simple and beginner-friendly single use crypto gift cards.</p>
+                          <p class="with-number"><span>1</span> Simple and beginner-friendly single use gift cards.</p>
                           <img src="img/icon_for-green-section_01.png" alt="">
                           <div class="button-container">
                             <a href="#order" class="btn">SHOP</a>
@@ -363,7 +363,7 @@
                   <a href="https://gnosis.pm/" target="_blank"><img  src="img/clients/1-2.png" alt="gnosis.pm"></a>
                   <a href="https://wepower.network" target="_blank"><img  src="img/clients/1-3.png" alt="wepower.network"></a>
                   <a href="https://aragon.org/" target="_blank"><img  src="img/clients/1-4.png" alt="aragon.org"></a>
-                  <a href="https://mycrypto.com" target="_blank"><img  src="img/clients/2-1.png" alt="mycrypto.com"></a>
+                  <a href="https://myetherwallet.com" target="_blank"><img  src="img/clients/2-1.png" alt="myetherwallet.com"></a>
                   <a href="https://www.longhash.com/" target="_blank"><img  src="img/clients/2-2.png" alt="www.longhash.com"></a>
                   <a href="https://ost.com/" target="_blank"><img  src="img/clients/2-4.png" alt="ost.com"></a>
             </div>
