--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row container mt-100 mb-5">
             <div class="col-md-10 offset-md-1 text-center">
               <h1 class="header mb-5">Coming soon</h1>
-              <p>Ether.cards technology — using NFC-enabled chips — can fuse unique tokens with physical cards inseparably. It enables the physical objects to evolve, receive power-ups and improve statistics.</p>
+              <p>Ether.cards technology — using NFC-enabled chips — can fuse unique tokens with physical objects inseparably. It enables the physical objects to evolve, receive power-ups and improve statistics.</p>
             </div>
           </div>
 
