poster image added to the video

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="row">
             <div class="col-md-6 offset-md-3">
               <div class="embed-responsive embed-responsive-16by9">
-                <video src="video/demo.mp4" controls controlslist="nodownload" preload="metadata" playsinline></video>
+                <video poster="/img/video_poster.jpg" src="/video/demo.mp4" controls="true" controlslist="nodownload" preload="metadata" playsinline  type="video/mp4"></video>
               </div>
             </div>
           </div>
