--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <main role="main" class="">
         <section class="section" id="home">
 
-          <div class="row container mt-100 mb-5">
+          <div class="row container mt-5 mb-3">
             <div class="col-md-10 offset-md-1 text-center">
               <h1 class="header mb-5">Coming soon</h1>
               <p>Ether.cards technology — using NFC-enabled chips — can fuse unique tokens with physical objects inseparably. It enables the physical objects to evolve, receive power-ups and improve statistics.</p>
@@ -52,6 +52,7 @@
             <div class="col-md-12">
               <div class="row card-deck row-eq-height-disabled">
                 <div class="ehbox card">
+                  <img class="card-img-top" src="img/image-01.png" alt="img1"/>
                   <h3 class="subhead">Collectibles</h3>
                   <ul>
                     <li>Guaranteed Authenticity</li>
@@ -60,6 +61,7 @@
                   </ul>
                 </div>
                 <div class="ehbox card">
+                  <img class="card-img-top" src="img/image-02.png" alt="img1"/>
                   <h3 class="subhead">Gaming</h3>
                   <ul>
                     <li>Guaranteed Authenticity</li>
@@ -68,6 +70,7 @@
                   </ul>
                 </div>
                 <div class="ehbox card">
+                  <img class="card-img-top" src="img/image-03.png" alt="img1"/>  
                   <h3 class="subhead">Ticketing</h3>
                   <ul>
                     <li>Makes counterfeiting difficult</li>
